--- a/ScannerManager.csproj
+++ b/ScannerManager.csproj
@@ -14,17 +14,27 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
+		<!--
 		<RootNamespace>MyApp</RootNamespace>
+		-->
+		<RootNamespace>ScannerManager</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
+		<!--
 		<ApplicationTitle>MyApp</ApplicationTitle>
-
+		-->
+		<ApplicationTitle>ScannerManager</ApplicationTitle>
+		
+		
 		<!-- App Identifier -->
+		<!--
 		<ApplicationId>com.companyname.myapp</ApplicationId>
+		-->
+		<ApplicationId>com.companyname.scannermanager</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -76,6 +86,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="View\GraphView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\HomeView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="View\MainView.xaml">
